--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<meta name="csrf-token" content="GFPFAKflVEdAAETPRKhmXqVt6xIP7sS6oOEXHTcE">
 		<title>捷径 - 手机弹幕</title>
-		<meta name="apple-itunes-app" content="app-id=1458344444,app-clip-bundle-id=com.zh.shakePhoto.Clip">
+		<meta name="apple-itunes-app" content="app-id=1535953762,app-clip-bundle-id=com.monsterhub.walletpass.AppClip">
 		<meta name="description" content="Moon FM - Premium Podcast App">
 	</head>
 
